--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 certifi==2023.7.22
 charset-normalizer==3.2.0
 idna==3.4
+pkg_resources==0.0.0
 pyTelegramBotAPI==4.12.0
 python-dotenv==1.0.0
+pytz==2023.3
 requests==2.31.0
+schedule==1.2.0
 urllib3==2.0.4
